--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^2.2.33",
     "morgan": "~1.9.0",
     "request": "^2.83.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "twilio": "^3.9.2"
   }
 }
